--- a/demo.html
+++ b/demo.html
@@ -91,7 +91,7 @@
               Sign up
             </button>
           </div>
-          <img src="t1.svg" class="image" alt="" />
+          <img src="js/t1.svg" class="image" alt="" />
         </div>
         <div class="panel right-panel">
           <div class="content">
@@ -103,7 +103,7 @@
               Sign in
             </button>
           </div>
-          <img src="t.svg" class="image" alt="" />
+          <img src="js/t.svg" class="image" alt="" />
         </div>
       </div>
     </div>
