--- a/demo.html
+++ b/demo.html
@@ -91,7 +91,7 @@
               Sign up
             </button>
           </div>
-          <img src="js/t1.svg" class="image" alt="" />
+          <img src="t1.svg" class="image" alt="" />
         </div>
         <div class="panel right-panel">
           <div class="content">
@@ -103,11 +103,11 @@
               Sign in
             </button>
           </div>
-          <img src="js/t.svg" class="image" alt="" />
+          <img src="t.svg" class="image" alt="" />
         </div>
       </div>
     </div>
 
-    <script src="js/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
