--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 			<button class="btn btn-success text-white btn-lg">
 				<i class="fa fa-user"></i>
 				<b>TEACHER</b></button></a>
-			<button class="btn btn-primary text-white btn-lg"><b>STUDENT</b><i class="fa fa-graduation-cap"></i></button>
+			<a href="student.html">
+			<button class="btn btn-primary text-white btn-lg"><b>STUDENT</b><i class="fa fa-graduation-cap"></i></button></a>
 
 
 		</div>
