--- a/student.html
+++ b/student.html
@@ -99,7 +99,7 @@
               Sign in
             </button>
           </div>
-          <img src="s1.svg" class="image" alt="" />
+          <img src="b.svg" class="image" alt="" />
         </div>
       </div>
     </div>
